# aitop-monitor

./: README.md  pyproject.toml  run.py
aitop/: __init__.py  app.py  budget.py  config.py  detail.py  store.py  utils.py
aitop/collectors/: __init__.py  claude.py  codex.py  gemini.py
aitop/css/: app.tcss
