[project]
name = "aitop"
version = "0.1.0"
description = "AI Tools Terminal Monitor"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
    "psutil>=5.9",
]

[project.scripts]
aitop = "aitop.app:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
